[gd_scene load_steps=2 format=3 uid="uid://cfnrscvrx0ci1"]

[ext_resource type="Script" uid="uid://d4k25dq0abu2w" path="res://source/debug_info/debug_info.gd" id="1_pffu5"]

[node name="DebugInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pffu5")

[node name="FPSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.16700001
anchor_bottom = 0.025
offset_right = -0.38401794
offset_bottom = -0.20000076
theme_override_font_sizes/font_size = 16
text = "FPS: "

[node name="DrawCallsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.025
anchor_right = 0.16700001
anchor_bottom = 0.049000002
offset_top = -0.20000076
offset_right = -0.38401794
offset_bottom = 0.24799919
text = "Draw calls: "

[node name="PrimitivesLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.049000002
anchor_right = 0.16700001
anchor_bottom = 0.074
offset_top = 0.24799919
offset_right = -0.38401794
offset_bottom = 0.048000336
text = "Primitives: "

[node name="VRAMUsageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.074
anchor_right = 0.16700001
anchor_bottom = 0.09900001
offset_top = 0.048000336
offset_right = -0.38401794
offset_bottom = -0.15200806
text = "VRAM usage: "
